# reporting-system

./: .env.example  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  _run_query.py  analysis.py  analysis2.py  backfill_dealio_daily_profits.py  backfill_jan2026.py  check_bonus.py  check_dates.py  check_dealio_cmd67.py  check_dealio_cols.py  check_locks.py  check_login.py  check_march_bonuses.py  check_pnl.py  check_sync_completeness.py  check_targets.py  compare_daily_pnl_cash.py  compare_historical_formulas.py  compare_pbi_logins.py  compare_pnl.py  compare_pnl_cash.py  compare_pnl_with_credit.py  compare_s4_volume.py  debug_bonus_check.py  debug_corrupt.py  debug_daily_pnl.py  debug_daily_pnl2.py  debug_daily_pnl_cash.py  debug_dealio_fields.py  debug_dealio_formula.py  debug_eez_gap.py  debug_eez_live_equity.py  debug_eez_live_now.py  debug_eez_method_b.py  debug_eez_no_credit.py  (+37 more)
.claude/: settings.json
.github/workflows/: ci.yml  deploy.yml
app/: cache.py  config.py  main.py  redis_app.py
app/auth/: auth.py  dependencies.py  role_filters.py
app/db/: dealio_conn.py  mssql_conn.py  mysql_conn.py  postgres_conn.py  redis_conn.py
app/etl/: fetch_and_store.py
app/routes/: accounts.py  agent_bonuses.py  all_ftcs.py  auth.py  campaign_performance.py  campaigns_sync.py  client_classification_sync.py  daily_monthly_performance.py  dashboard.py  data_sync.py  dealio_daily_profit_sync.py  dealio_daily_profits_sync.py  dealio_mt4trades_sync.py  dealio_mt5trades_sync.py  dealio_new_sync.py  eez_comparison.py  eez_old.py  fsa_report.py  ftc_date.py  ftd100_sync.py  holidays.py  last_sync.py  live_equity.py  mssql_dealio_mt5trades_sync.py  redis_perf.py  report.py  scoreboard.py  targets_sync.py  total_traders.py  trading_accounts_sync.py  transactions_report.py  transactions_sync.py  users.py  users_mgmt.py  users_sync.py
app/templates/: agent_bonuses.html  all_ftcs.html  campaign_performance.html  daily_monthly_performance.html  dashboard.html  data_sync.html  eez_comparison.html  eez_old.html  fsa_report.html  ftc_date.html  holidays.html  login.html  redis_perf.html  report.html  scoreboard.html  total_traders.html  transactions_report.html  users.html  users_mgmt.html
app/utils/: dates.py
qa/: config.py  engine.py  history.py  reporter.py
qa/checks/: agent_bonuses.py  base.py  dashboard.py  ftc_date.py  per_agent_crosscheck.py  performance.py  sync_sources.py
scripts/: agents_setup.sql  backfill_missing_transactions.py  check_missing_breakdown.py  check_mssql_columns.py  check_type_name.py  convert_mt5_timestamps_to_utc.py  diagnose_missing_transactions.py  redis_check_notional.lua  setup_cron.sh  sync_trading_accounts_to_redis.py
sql/: setup_materialized_views.sql
tests/: README.md  conftest.py
tests/contract/: test_admin_routes.py  test_campaign_performance_routes.py  test_dmp_routes.py  test_other_routes.py  test_remaining_routes.py  test_scoreboard_routes.py  test_smoke.py
tests/fixtures/: schema.sql
tests/gui/: conftest.py  test_pages.py
tests/integration/: test_auth_crud.py  test_routes_e2e.py  test_smoke.py  test_sync_log.py
tests/unit/: test_auth.py  test_cache.py  test_dates.py  test_role_filters.py  test_smoke.py  test_template_state_invariants.py
