[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "reporting-system"
version = "0.1.0"
description = "CMTrading internal financial/trading reporting platform"
requires-python = ">=3.11"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "-p", "no:cacheprovider",
]
markers = [
    "unit: fast, no IO, no DB. Pre-commit runs these.",
    "contract: route/HTTP tests against the FastAPI app, no real DB.",
    "integration: requires a real Postgres test DB (TEST_DATABASE_URL).",
    "gui: Playwright browser tests, requires the app running.",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:apscheduler.*",
    "ignore::DeprecationWarning:passlib.*",
    # pytest-asyncio plugin uses several asyncio APIs deprecated in Python 3.14+.
    # CI target is 3.11 where these don't fire; this keeps local dev on 3.14 green.
    "ignore:'asyncio\\..+' is deprecated:DeprecationWarning",
    # `datetime.utcnow()` is deprecated on 3.14, used in app/auth/auth.py + app/main.py.
    # Migration to `datetime.now(UTC)` requires timezone-correctness review (server TZ vs
    # JWT exp encoding) and is tracked as a Phase 1+ follow-up.
    "ignore:datetime.datetime.utcnow.. is deprecated:DeprecationWarning",
    # Python 3.14 + httpx ASGITransport sometimes leaves an unclosed GzipFile during
    # contract-test client teardown. Pytest's unraisable-exception hook escalates this
    # to PytestUnraisableExceptionWarning. Benign on 3.14, doesn't fire on CI's 3.11.
    "ignore::ResourceWarning",
    "ignore:.*unclosed GzipFile.*:pytest.PytestUnraisableExceptionWarning",
    # starlette's Jinja2Templates.TemplateResponse signature changed: routes use the
    # legacy (name, context) form. Migrating every route's template call is a separate
    # mechanical change tracked as a Phase 2+ follow-up.
    "ignore:.*The `name` is not the first parameter anymore.*:DeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["app"]
omit = [
    "app/main.py",
    "app/etl/*",
    "*/__init__.py",
]
parallel = true

[tool.coverage.report]
show_missing = true
skip_covered = false
# Floor set just below current measured coverage on test-coverage HEAD (~13%).
# Ratchet up as Phase 2 contract tests land. Set per-directory thresholds when the
# legacy app/db/* and app/routes/* are gradually covered.
fail_under = 12
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["app/templates", "scripts"]

[tool.ruff.lint]
select = [
    "E", "F", "W",
    "I",
    "B",
    "UP",
    "SIM",
]
ignore = [
    "E501",
    "B008",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["B011"]
# Legacy style suppressions for the existing app/ codebase. New tests/ code stays strict.
# Drop these entries as files are touched and modernised.
"app/**/*.py" = [
    "E701",  # multiple statements on one line (colon) — pervasive `if x: return` style
    "E702",  # multiple statements on one line (semicolon) — same legacy style
    "E402",  # module-level import not at top — intentional in app/main.py for warm-cache helpers
]

[tool.mypy]
python_version = "3.11"
strict = false
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = false
no_implicit_optional = true
check_untyped_defs = true
exclude = [
    "scripts/",
    "build/",
]

[[tool.mypy.overrides]]
module = ["pymssql.*", "pymysql.*", "psycopg2.*", "apscheduler.*", "reportlab.*"]
ignore_missing_imports = true
